# devkit

./: .gitignore  .gitmodules  checkout_server.py  deploy.sh  devkit-cli  pyproject.toml
devkit/: __init__.py  main.py
devkit/cli/: buy.py  config.py  data.py  new.py  review.py  tools.py
devkit/pr_reviewer/: server.py
devkit/templates/: registry.py
devkit/templates/cli-tool/: README.md.j2  pyproject.toml.j2  template.json
devkit/templates/cli-tool/tests/: test_main.py.j2
devkit/templates/cli-tool/{{ project_slug }}/: main.py.j2
devkit/templates/saas-starter/: .env.example.j2  README.md.j2  package.json.j2  tailwind.config.js  template.json
devkit/templates/saas-starter/app/: globals.css  layout.tsx.j2  middleware.ts  page.tsx.j2
devkit/templates/saas-starter/app/%28auth%29/auth/callback/: route.ts
devkit/templates/saas-starter/app/%28auth%29/login/: page.tsx
devkit/templates/saas-starter/app/%28dashboard%29/dashboard/: page.tsx
devkit/templates/saas-starter/app/%28dashboard%29/dashboard/billing/: page.tsx
devkit/templates/saas-starter/app/api/create-checkout/: route.ts
devkit/templates/saas-starter/app/api/create-portal/: route.ts
devkit/templates/saas-starter/app/api/webhooks/stripe/: route.ts
devkit/templates/saas-starter/app/components/: navbar.tsx.j2  theme-provider.tsx
devkit/templates/saas-starter/app/lib/: rate-limit.ts  stripe.ts
devkit/templates/saas-starter/prisma/: schema.prisma.j2
devkit/templates/saas-starter/scripts/: seed.ts
