[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devkit"
version = "0.1.0"
description = "All-in-one dev toolkit: boilerplate gen, AI code review, CLI utils, data APIs"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.scripts]
devkit = "devkit.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["devkit*"]
